--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+section{
+    padding: 100px 0;
+}
+.max-width{
+    max-width: 2000px;
+    padding: 0 60px;
+    margin: auto;
+}
+.about, .skills, button, footer{
+    font-family: 'Poppins', sans-serif;
+}
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+section .title::after{
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    font-size: 20px;
+    color: var(--green);
+    padding: 0 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
 body {
   background-image: url('https://images.pexels.com/photos/1254736/pexels-photo-1254736.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   background-size: cover;
@@ -7,8 +55,53 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-nav {
-	border-bottom: 2px solid orange;
+/* navbar styling */
+.dropdown{
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 30px 0;
+    font-family: 'Ubuntu', sans-serif;
+    transition: all 0.3s ease;
+}
+.dropdown.sticky{
+    padding: 15px 0;
+    background: var(--green);
+}
+.navbar .max-width{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.dropdown .logo a{
+    color: rgb(98, 145, 233);
+    font-size: 35px;
+    font-weight: 600;
+}
+.dropdown .logo a span{
+    color: var(--green);
+    transition: all 0.3s ease;
+}
+.dropdown.sticky .logo a span{
+    color: #fff;
+}
+.dropdown .menu li{
+    list-style: none;
+    display: inline-block;
+}
+.dropdown .menu li a{
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    transition: color 0.3s ease;
+}
+.navbar .menu li a:hover{
+    color: var(--green);
+}
+.navbar.sticky .menu li a:hover{
+    color: #fff;
 }
 .checkbox {
 	display: flex;
@@ -24,11 +117,12 @@ ol {
 }
 
 a {
-	color: orange;
+	color: rgb(255, 255, 255);
+	text-decoration: none;
 }
 
 a:visited {
-	color: crimson;
+	color: orange;
 }
 
 
