--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     text-decoration: none;
 }
 section{
-    padding: 100px 0;
+    padding: 70px 0;
 }
 .max-width{
     max-width: 2000px;
@@ -40,7 +40,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: var(--green);
+    color: orange;
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -56,7 +56,7 @@ body {
 }
 
 /* navbar styling */
-.dropdown{
+.nav{
     position: fixed;
     width: 100%;
     z-index: 999;
@@ -64,32 +64,20 @@ body {
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
 }
-.dropdown.sticky{
+.nav.sticky{
     padding: 15px 0;
-    background: green;
+    background: orange;
 }
 .navbar .max-width{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.dropdown .logo a{
-    color: rgb(98, 145, 233);
-    font-size: 35px;
-    font-weight: 600;
-}
-.dropdown .logo a span{
-    color: green;
-    transition: all 0.3s ease;
-}
-.dropdown.sticky .logo a span{
-    color: #fff;
-}
-.dropdown .menu li{
+.nav .menu li{
     list-style: none;
     display: inline-block;
 }
-.dropdown .menu li a{
+.nav .menu li a{
     display: block;
     color: #fff;
     font-size: 18px;
@@ -97,10 +85,10 @@ body {
     margin-left: 25px;
     transition: color 0.3s ease;
 }
-.navbar .menu li a:hover{
-    color: green;
+.nav .menu li a:hover{
+    color: orange;
 }
-.navbar.sticky .menu li a:hover{
+.nav.sticky .menu li a:hover{
     color: #fff;
 }
 .checkbox {
@@ -158,18 +146,18 @@ img {
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: green;
+    background: orange;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid green;
+    border: 2px solid orange;
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: green;
+    color: orange;
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -197,7 +185,7 @@ img {
     height: 100%;
     left: 0;
     top: 0;
-    background: green;
+    background: orange;
 }
 .skills-content .right .html::before{
     width: 40%;
@@ -213,4 +201,102 @@ img {
 }
 .skills-content .right .mysql::before{
     width: 10%;
+}
+
+/* contact section styling */
+.contact .title::before{
+    background: #111;
+}
+.contact .title::after{
+    background: linear-gradient(315deg, #ffffff 74%, #ece9d7 0%);
+    content: "Fill It Out";
+}
+.contact .contact-content .column{
+    width: calc(50% - 30px);
+}
+.contact .contact-content .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.contact .contact-content .left p{
+    text-align: justify;
+}
+.contact .contact-content .left .icons{
+    margin: 10px 0;
+}
+.contact .contact-content .row{
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+.contact .contact-content .row .info{
+    margin-left: 30px;
+}
+.contact .contact-content .info .head{
+    font-weight: 500;
+}
+.contact .contact-content .info .sub-title{
+    font-style: italic;
+    font-weight: 200;
+    color: orange;
+}
+.contact .right form .fields{
+    display: flex;
+}
+.contact .right form .field,
+.contact .right form .fields .field{
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+.contact .right form .textarea{
+    height: 80px;
+    width: 100%;
+}
+.contact .right form .name{
+    margin-right: 10px;
+}
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.3s ease;
+}
+.contact .right form .field input:focus,
+.contact .right form .textarea textarea:focus{
+    border-color: #b3b3b3;
+}
+.contact .right form .textarea textarea{
+  padding-top: 10px;
+  resize: none;
+}
+.contact .right form .button-area{
+  display: flex;
+  align-items: center;
+}
+.right form .button-area button{
+  color: #fff;
+  display: block;
+  width: 160px!important;
+  height: 45px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  flex-wrap: nowrap;
+  background: orange;
+  border: 2px solid orange;
+  transition: all 0.3s ease;
+}
+.right form .button-area button:hover{
+  color: orange;
+  background: none;
 }
