--- a/styles.css
+++ b/styles.css
@@ -91,36 +91,65 @@ body {
 .nav.sticky .menu li a:hover{
     color: #fff;
 }
-.checkbox {
-	display: flex;
+
+/* home section styling */
+.home {
+    display: flex;
+    height: 30vh;
+    color: #fff;
+    min-height: 500px;
+    background-size: 75%;
+    font-family: 'ubuntu', sans-serif;
+}
+.home img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 50px;
+    padding-bottom: 85px;
+
+}
+.home .max-width{
+  width: 100%;
+  display: flex;
+}
+.home .max-width .row{
+  margin-right: 0;
+}
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span{
+    color: var(--green);
+    font-weight: 500;
+}
+.home .home-content a{
+    display: inline-block;
+    background: var(--green);
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    font-weight: 400;
+    border-radius: 6px;
+    border: 2px solid var(--green);
+    transition: all 0.3s ease;
+}
+.home .home-content a:hover{
+    color: var(--green);
+    background: none;
 }
 
-ol {
-	padding-left: 0;
-}
-
-.crumb {
-	margin-right: 2em;
-	display: inline;
-}
-
-a {
-	color: rgb(255, 255, 255);
-	text-decoration: none;
-}
-
-a:visited {
-	color: orange;
-}
-
-
-input {
-	display: block;
-}
-
-img {
-	max-width: 300px;
-}
 
 /* skills section styling */
 .skills{
@@ -204,8 +233,8 @@ img {
 }
 
 /* contact section styling */
-.contact .title::before{
-    background: #111;
+.contact {
+    color: #fff;
 }
 .contact .title::after{
     background: linear-gradient(315deg, #ffffff 74%, #ece9d7 0%);
