--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,7 @@ body {
     transition: all 0.3s ease;
 }
 .nav.sticky{
-    padding: 15px 0;
-    background: orange;
+    padding: 10px 0;
 }
 .navbar .max-width{
     display: flex;
@@ -79,14 +78,14 @@ body {
 }
 .nav .menu li a{
     display: block;
-    color: #fff;
+    color: rgb(238, 186, 89);
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
     transition: color 0.3s ease;
 }
 .nav .menu li a:hover{
-    color: orange;
+    color: rgb(187, 123, 3);
 }
 .nav.sticky .menu li a:hover{
     color: #fff;
@@ -110,6 +109,12 @@ body {
     padding-bottom: 85px;
 
 }
+.text-1{
+    font-size: 27px;
+	color: #fff;
+	font-family: 'ubuntu', sans-serif;
+	list-style-type: none;
+}
 .home .max-width{
   width: 100%;
   display: flex;
@@ -130,23 +135,23 @@ body {
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: var(--green);
+    color: orange;
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: var(--green);
+    background: orange;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid var(--green);
+    border: 2px solid orange;
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: var(--green);
+    color: orange;
     background: none;
 }
 
