done with home page fully

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
     text-decoration: none;
 }
+.flex {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 section{
     padding-top: 60px 0;
 	margin-top: 30px;
@@ -101,7 +107,7 @@ body {
 .home {
 	margin-top: 30px;
     display: flex;
-    height: 30vh;
+    height: 20vh;
     color: #fff;
     min-height: 500px;
     background-size: 75%;
@@ -281,6 +287,7 @@ button{
 /* contact section styling */
 .contact {
     color: #fff;
+	padding-top: 30px;
 }
 .contact .title::after{
     background: linear-gradient(315deg, #ffffff 74%, #ece9d7 0%);
@@ -289,33 +296,6 @@ button{
 .contact .contact-content .column{
 	margin-top: 20px;
     width: calc(100% - 30px);
-}
-.contact .contact-content .text{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-.contact .contact-content .left p{
-    text-align: justify;
-}
-.contact .contact-content .left .icons{
-    margin: 10px 0;
-}
-.contact .contact-content .row{
-    display: flex;
-    height: 65px;
-    align-items: center;
-}
-.contact .contact-content .row .info{
-    margin-left: 30px;
-}
-.contact .contact-content .info .head{
-    font-weight: 500;
-}
-.contact .contact-content .info .sub-title{
-    font-style: italic;
-    font-weight: 200;
-    color: orange;
 }
 .contact .right form .fields{
     display: flex;
